fix the margin overflow

--- a/src/Pages/Editor/panels/lesson/lessonPanel.module.css
+++ b/src/Pages/Editor/panels/lesson/lessonPanel.module.css
@@ -1,7 +1,6 @@
 .lesson{
     display: flex;
     flex-direction: column;
-    width: 100%;
     height: 100%;
-    padding-left:6px;
+    margin-left:6px;
 }
